# --------------------------------------------------------------------------------------------------
# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2024 Jayesh Badwaik <j.badwaik@fz-juelich.de>
# --------------------------------------------------------------------------------------------------

[project]
name = "keyso"
dynamic = ["version"]
description = 'A Set Algebra for Key-Value Pairs'
readme = "readme.md"
license = "Apache-2.0"
authors = [
{ name = "Jayesh Badwaik", email = "j.badwaik@fz-juelich.de" },
]
dependencies = [
  "semver"
]

[project.urls]
Documentation = "https://ambhora.gitlab.io/software/keyso"
Issues = "https://gitlab.com/ambhora/software/keyso/-/issues"
Source = "https://gitlab.com/ambhora/software/keyso"

[project.scripts]
keyso = "keyso.cli:main"

# --------------------------------------------------------------------------------------------------
# Hatch configuration
# --------------------------------------------------------------------------------------------------
[tool.hatch.version]
path = "src/keyso/metadata.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keyso"]

[tool.hatch.build.targets.wheel.shared-data]
"share"="share"

# --------------------------------------------------------------------------------------------------
# PyTest configuration
# --------------------------------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov --cov-report term-missing --cov-fail-under=98"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]

[tool.hatch.envs.types]
dependencies = [
  "types-PyYAML"
]

[tool.hatch.envs.doc]
dependencies = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "mike"
]

[tool.black]
line-length = 100

